[package]
name = "ring-buffer"
version = "0.1.0"
edition = "2021"

[features]
jemalloc = [ "tikv-jemallocator" ]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", optional = true }

[dev-dependencies]
minstant = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
core_affinity = "0.8"

[profile.test]
opt-level = 3
debug = false
strip = false
debug-assertions = false
overflow-checks = false
lto = "fat"
# panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[[bench]]
name = "ring_buffer"
harness = false
